--- a/views/server.html
+++ b/views/server.html
@@ -214,14 +214,10 @@
                   <div class="copyright-text">
                     <p>
                       ©
-                      <a href="//github.com/SudhanPlayz/Discord-MusicBot"
+                      <a href=""
                         >Discord Music Bot</a
                       >. All rights reserved. Made by
-                      <a href="//github.com/SudhanPlayz">Sudhan</a> and its
-                      <a
-                        href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                        >contributors</a
-                      >
+                      <a href="">INFINITY</a>
                     </p>
                   </div>
                 </div>
